<resources>
    <string name="app_name">Movie-App</string>
    <string name="lewati">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="description">Lebih mudah untuk mengetahui \n film yang sedang tampil</string>
    <string name="presale">Presale</string>
    <string name="cashless">CashLess</string>
    <string name="presale_desc">Tidak perlu khawatir ketinggalan \n update film terbaru</string>
    <string name="cashless_desc">Gunakan E-wallet untuk \n smelakukan transaksi</string>
    <string name="memulai">Memulai</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Masuk Akun</string>
    <string name="daftar">Daftar Akun Baru</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Alamat Email</string>
    <string name="photo">Photo</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="simpan_dan_lanjutkan">SImpan dan Lanjutkan</string>
    <string name="welcome_yaumil">Welcome,\nYaumil</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="name_user">Muhammad Yaumil</string>
    <string name="amount_wallet">Rp.100.000</string>
    <string name="title">Avengers EndGame: Infinity War</string>
    <string name="rating">4.7</string>
    <string name="genre">Action,Fiction,Science</string>
    <string name="Synopsys">Synopsys</string>
    <string name="synopsys_desc">Adrift in space with no food or water, Tony Stark sends a message to Pepper Potts as his oxygen supply starts to dwindle. Meanwhile, the remaining Avengers -- Thor, Black Widow, Captain America and Bruce Banner -- must figure out a way to bring back their vanquished allies for an epic showdown with Thanos -- the evil demigod who decimated the planet and the universe.</string>
    <string name="Whos_Played">Who\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="alta_battle">Alta Battle</string>
    <string name="beli_tiket">Beli Tiket(2)</string>
    <string name="checkout">Checkout</string>
    <string name="when">When</string>
    <string name="batalkan">Batalkan</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="date_and_time">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="date">12 Aug, 10 AM</string>
    <string name="place">Depok Mall, Cinema 3</string>
    <string name="items_header">Items</string>
    <string name="seat">Seat No. C1</string>
    <string name="seat2">Seat No. C2</string>
    <string name="price">RP.70.000</string>
    <string name="total">Total Harus Dibayar</string>
    <string name="total_price">Rp.140.000</string>
    <string name="ewallet">E-Wallet</string>
    <string name="total_wallet">Total Balance</string>
    <string name="total_number_wallet">Rp.200.000</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_wallet">My Wallet</string>
    <string name="my_wallet_balance">Rp.200.000</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="total_movies">2049 Movies</string>
</resources>